--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     
     - name: Build the Docker image APP
-      run: docker build . --file docker/php/Dockerfile --tag ikerib/langileak
+      run: docker build . --file docker/prod/Dockerfile --tag ikerib/langileak
       
     - name: Docker Push
       run: docker push ikerib/langileak
